--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ jdbc.password=zhaorunze@123
 mybatic_config_file=mybatis-config.xml
 mapper_path=/mapper/**.xml
 entity_package=com.imooc.demo.entity
+
+upfile.location=upfliepath/
